--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_fullscreen: ^1.1.0
   get: ^4.6.6
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
