--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   get: ^4.6.5
   dio: ^5.0.0
+  mqtt_client: ^9.6.3
 
 
   # The following adds the Cupertino Icons font to your application.
