--- a/snap/gui/app_icon.desktop
+++ b/snap/gui/app_icon.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=Flutter Linux App
-Comment=Flutter Linux launcher icon
+Name=HSF
+Comment=HSF
 Exec=app_icon
 Icon=app_icon.png
 Terminal=false
